--- a/OdeToFood/OdeToFood.Data/OdeToFood.Data.csproj
+++ b/OdeToFood/OdeToFood.Data/OdeToFood.Data.csproj
@@ -51,10 +51,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\202108201505572_InitialCreate.cs" />
+    <Compile Include="Migrations\202108201505572_InitialCreate.designer.cs">
+      <DependentUpon>202108201505572_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CuisineType.cs" />
     <Compile Include="Models\Restaurant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\InMemoryCuisineTypeData.cs" />
     <Compile Include="Services\InMemoryRestaurantData.cs" />
+    <Compile Include="Services\ICuisineTypeData.cs" />
     <Compile Include="Services\IRestaurantData.cs" />
     <Compile Include="Services\OdeToFoodDbContext.cs" />
     <Compile Include="Services\SqlRestaurantData.cs" />
@@ -62,6 +69,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202108201505572_InitialCreate.resx">
+      <DependentUpon>202108201505572_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
