Adding CuisineType as its own table

--- a/OdeToFood/OdeToFood.Data/OdeToFood.Data.csproj
+++ b/OdeToFood/OdeToFood.Data/OdeToFood.Data.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Services\ICuisineTypeData.cs" />
     <Compile Include="Services\IRestaurantData.cs" />
     <Compile Include="Services\OdeToFoodDbContext.cs" />
+    <Compile Include="Services\SqlCuisineTypeData.cs" />
     <Compile Include="Services\SqlRestaurantData.cs" />
   </ItemGroup>
   <ItemGroup>
