--- a/MVC/OdeToFood/OdeToFood.Web/bin/OdeToFood.Web.dll.config
+++ b/MVC/OdeToFood/OdeToFood.Web/bin/OdeToFood.Web.dll.config
@@ -14,6 +14,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="UserImagePath" value="C:\Users\hpalmer\source\repos\Harry\OdeToFood.Data\UserImages\"/>
   </appSettings>
 	<connectionStrings>
 		<add name="OdeToFoodDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=OdeToFoodMVC;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
